# clash-chain-patcher

./: .gitignore  Cargo.toml  HOW-TO-USE-CN.md  LICENSE  LOGO_SETUP.md  QUICK-START-CN.md  README.md  README_CN.md  SUMMARY-2026-02-03.md  build.rs
.github/workflows/: release.yml
doc/: 10-SLOT-IMPLEMENTATION.md  AUTO-HEALTH-CHECK-CN.md  CRITICAL-FIXES.md  FAQ-配置持久化.md  FILE-HISTORY-FEATURE-CN.md  FINAL-SOLUTION.md  FIXES-2026-02-03-2.md  FIXES-2026-02-03.md  HISTORY-BUTTON-FIX.md  IMPLEMENTATION-SUMMARY-CN.md  IMPROVEMENTS-2026-02-03.md  INTERVAL-INPUT-FIX.md  Implementation-Plan-Proxy-Management.md  Implementation-Summary.md  MAKEPAD-LIMITATION.md  PERIODIC-HEALTH-CHECK-CN.md  Phase2-完成总结.md  Phase3-Issue-Report.md  Phase3-Progress.md  Proxy-Pool-Usage-Guide.md  README.md  SIMPLE-FIX-NOW.md  TRANSLATION-COMPLETE.md  Task3.1-完成总结.md  UI设计-Phase3.md  USAGE-GUIDE-CN.md  WORKFLOW-EXPLAINED-CN.md  Windows代理链配置指南.md  dev.md  progress.md  roadmap.md  使用指南-代理链配置.md  开发计划-Core模块.md  开发计划-Phase3-GUI集成.md  技术方案-动态代理.md  技术调研-Clash-API自动化.md  文档更新日志-2026-02-02.md  方案优化-自动配置监控.md  测试指南-新UI.md  测试计划-Core模块.md  (+4 more)
docs/: MEMORY_LEAK_ANALYSIS.md  ROADMAP.md
examples/: proxy_server.rs
logo/: AppIcon.icns
packaging/before-packaging-command/: Cargo.toml
packaging/before-packaging-command/src/: main.rs
scripts/: bundle_macos.sh  generate_icons.py
src/: app.rs  cli.rs  lib.rs  main.rs  patcher.rs
src/app_impl/: custom_rules_ops.rs  file_ops.rs  health_ops.rs  mod.rs  patch_ops.rs  proxy_ops.rs  rules_ops.rs  ui_helpers.rs
src/bridge/: config_bridge.rs  health_bridge.rs  merger_bridge.rs  mod.rs  watcher_bridge.rs
src/config/: manager.rs  mod.rs  upstream.rs
src/health/: checker.rs  mod.rs  validator.rs
src/merger/: clash_merger.rs  mod.rs
src/proxy/: config.rs  mod.rs  relay.rs  server.rs  upstream.rs
src/state/: mod.rs  proxy_state.rs
src/watcher/: clash_watcher.rs  mod.rs
